# Nida

./: .clangd  .gitignore  Kbuild  Makefile  README.md  get_kernel_src_tree.h  get_kernel_src_tree.sh  module_load.sh
Nida_daemon/: CMakeLists.txt
Nida_daemon/include/: nida.h
Nida_daemon/src/: nida_daemon.c
Nida_daemon/tests/: test_client.c
devel_vm_setup/: create_vm.sh  default.xml  ubuntu-vm.xml
kernel_5.14.0-284.11.1.el9_2.x86_64/: Makefile
kernel_5.14.0-284.11.1.el9_2.x86_64/src/: nida_mr_pool.c  nida_mr_pool.h  nida_portals_main.c  nida_rdma_cm.h  nida_rdma_ib.h  portals4.h  portals4_bxiext.h
lvim_staff/: config.lua
src/: nida.h  nida_portals.c  nida_portals_main.c  nida_rdma_cm.c  nida_rdma_ib.c  nida_rdma_ib.h
vm_in_cluster_installation_guide/: install_guide.md  install_vm.sh
vm_local_guide/: NVMEoF_target.sh  README.md
